CHANGES IN VERSION 1.7.18-1.7.22
-------------------------

NEW FEATURES

    o LZMA compression algorithm is available in the GDS system (LZMA, LZMA_RA)

    o faster implementation of variable-length string: the default string
      becomes string with the length stored in the file instead of
      null-terminated string

UTILITIES

    o improve the read speed of characters (+18%)

    o correctly interpret factor variable in `digest.gdsn()` when
      `digest.gdsn(..., action="Robject")`, since factors are not integers


CHANGES IN VERSION 1.7.0-1.7.17
-------------------------

NEW FEATURES

    o `digest.gdsn()` to create hash function digests (e.g., md5, sha1,
      sha256, sha384, sha512), requiring the package digest

    o new function `summarize.gdsn()`

    o `show()` displays the content preview

    o define C MACRO 'COREARRAY_REGISTER_BIT32' and 'COREARRAY_REGISTER_BIT64'
      in CoreDEF.h

    o new C functions `GDS_R_Append()` and `GDS_R_AppendEx()` in R_GDS.h

    o allows efficiently concatenating compressed blocks (i.e., ZIP_RA
      and LZ4_RA)

    o v1.7.12: add a new data type: packedreal24

    o define C MACRO 'COREARRAY_SIMD_SSSE3' in CoreDEF.h

    o v1.7.13: `GDS_Array_ReadData()`, `GDS_Array_ReadDataEx()`,
      `GDS_Array_WriteData()` and `GDS_Array_AppendData()` return `void*`
      instead of `void` in R_GDS.h

    o v1.7.15: `GDS_Array_ReadData()` and `GDS_Array_ReadDataEx()` allow
      Start=NULL or Length=NULL

    o v1.7.16: new C function `GDS_Array_AppendStrLen()` in R_GDS.h

UTILITIES

    o `paste(..., sep="")` is replaced by `paste0(...)` (requiring >=R_v2.15.0)

    o improve random access for ZIP_RA and LZ4_RA, e.g., in the example of
      vignette, +12% for ZIP_RA and 1.7-fold speedup in LZ4_RA

DEPRECATED AND DEFUNCT

    o bit17, ..., bit23, bit25, ..., bit31, sbit17, ..., sbit23, sbit25, ...,
      sbit31 are deprecated, and instead it is suggested to use data
      compression

BUG FIXES
